Reformat code and handle checked exceptions.